--- a/pages/index.html
+++ b/pages/index.html
@@ -5,24 +5,40 @@
     <title>SPRINGMVC-LOGIN</title>
     <script type="text/javascript" src="/libs/axios/axios.min.js"></script>
     <script type="text/javascript" src="../js/common.js"></script>
+    <style>
+        .iframe-style {
+            width: 100%;
+            height: 850px;
+            frameborder: "no";
+            border: 0;
+            marginwidth: 0;
+            marginheight: 0;
+            scrolling: "no";
+            allowtransparency: "yes";
+        }
+
+        .layout-header-bar {
+            background: #fff;
+            box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
+        }
+    </style>
 </head>
 <body>
 <div id="app">
-    <Row>
-        <i-col span="24">
-            <div><h1>{{head}}</h1></div>
-        </i-col>
-    </Row>
-    <Row>
-        <i-col span="6">
-            <div>
-                <my-menu v-bind:menus="menus"></my-menu>
-            </div>
-        </i-col>
-        <i-col span="18">
-            <div><h1>HEAD</h1></div>
-        </i-col>
-    </Row>
+    <Layout>
+        <Sider ref="side1" hide-trigger collapsible :collapsed-width="78">
+            <my-menu v-bind:menus="menus"></my-menu>
+        </Sider>
+        <Layout>
+            <Header :style="{padding: 0}" class="layout-header-bar">
+                <Icon @click.native="collapsedSider" :style="{margin: '20px 20px 0'}" type="navicon-round"
+                      size="24"></Icon>
+            </Header>
+            <Content id="content" :style="{margin: '20px', background: '#fff', minHeight: '850px'}">
+                <iframe id="main" class="iframe-style" src="role/rolelist.html" ></iframe>
+            </Content>
+        </Layout>
+    </Layout>
 </div>
 <template id="myMenu">
     {{menus}}
