--- a/pages/role/rolelist.html
+++ b/pages/role/rolelist.html
@@ -18,6 +18,8 @@
             <i-col span="18" style="text-align: right;">
                 <form-item>
                     <i-button type="primary" @click="getRoleList">查询</i-button>
+                    <i-button type="primary" @click="reset">重置</i-button>
+                    <i-button type="primary" @click="gotoAddPage">添加角色</i-button>
                 </form-item>
             </i-col>
         </Row>
