--- a/pages/index.html
+++ b/pages/index.html
@@ -48,7 +48,7 @@
                 <Icon type="ios-paper"></Icon>
                 {{submenu.subName}}
             </template>
-            <Menu-Item name="item.itemIndex" v-for="item in submenu.menuItemList"><a v-bind:href="item.itemUrl">{{item.itemName}}</a>
+            <Menu-Item name="item.itemIndex" v-for="item in submenu.menuItemList"><a href="javascript:void(0);" @click="gotoPage(item.itemUrl);" >{{item.itemName}}</a>
             </Menu-Item>
         </Submenu>
     </i-menu>
